# bisectrunk

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/design/: deps.md  isolation.md  principles.md  protocol.md  strategies.md
docs/guide/: cli.md  hooks.md  install.md  quickstart.md  recipes.md  results.md
docs/stylesheets/: extra.css
src/: cli.rs  config.rs  evaluate.rs  gitrepo.rs  hooks.rs  lib.rs  main.rs  mirror.rs  oracle.rs  pins.rs  progress.rs  report.rs  scheduler.rs  state.rs  util.rs  worktree.rs
src/strategy/: bisect.rs  mod.rs  scan.rs
tests/: bisect.rs  compare.rs  polish.rs  run.rs  scan.rs
tests/common/: mod.rs
