[package]
name = "bisectrunk"
version = "0.1.1"
edition = "2024"
rust-version = "1.87"
description = "Parallel, environment-aware, resumable Git bisection executor"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nanxstats/bisectrunk"
documentation = "https://nanx.me/bisectrunk/"
keywords = ["git", "bisect", "cli", "testing", "regression"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::testing",
]
authors = ["Nan Xiao <me@nanx.me>"]
exclude = [
    "AGENTS.md",
    "SPEC.md",
    "vendor/",
    "pyproject.toml",
    "uv.lock",
    ".python-version",
    "site/",
    "docs/",
    "zensical.toml",
]

[dependencies]
anyhow = "1.0.103"
blake3 = "1.8.5"
clap = { version = "4.6.2", features = ["derive"] }
console = "0.16.4"
crossbeam-channel = "0.5.16"
ctrlc = "3.5.2"
etcetera = "0.11.0"
git2 = { version = "0.21.0", features = [
    "vendored-libgit2",
    "vendored-openssl",
] }
humantime = "2.4.0"
indicatif = "0.18.6"
jiff = { version = "0.2.32", features = ["serde"] }
regex = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
similar = "3.1.1"
tempfile = "3.27.0"
toml = "1.1.3"
xshell = "0.2.7"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
proptest = "1.11.0"
